[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "onrobot-api"
version = "0.1.0"
description = "Python API for OnRobot gripper control via XML-RPC."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OnRobot API Contributors" }]
dependencies = [
    "python-socketio>=5.11.0",
    "websocket-client>=1.7.0",
]

[project.urls]
Repository = "https://github.com/profi-robotics/onrobot-api"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "coverage[toml]>=7.6.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["onrobot"]

[tool.ruff]
extend-exclude = ["legacy"]

[tool.pytest.ini_options]
markers = [
    "unit: fast deterministic tests that do not require hardware",
    "integration: tests that exercise subsystem integration with mocks/fakes",
    "hardware: tests that require real gripper hardware",
]
